--- a/plugins/outputs/microsoft_fabric/sample.conf
+++ b/plugins/outputs/microsoft_fabric/sample.conf
@@ -1,8 +1,8 @@
 # Sends metrics to Microsoft Fabric
 [[outputs.microsoft_fabric]]
   ## The URI property of the Azure Data Explorer resource on Azure
-  ## ex: endpoint_url = https://myadxresource.australiasoutheast.kusto.windows.net
-  endpoint_url = ""
+  ## ex: connection_string = https://myadxresource.australiasoutheast.kusto.windows.net
+  connection_string = ""
 
 
     [outputs.microsoft_fabric.adx_conf]
@@ -32,14 +32,29 @@
         ##    - queued   --  queue up metrics data and process sequentially
         # ingestion_type = "queued"
 
-    [outputs.microsoft_fabric.es_conf]
-        ## Name of the client to be used for sending the data to the Eventhub
-        client_name = ""
+    [outputs.microsoft_fabric.eh_conf]
+        ## The full connection string to the Event Hub (required)
+        ## The shared access key must have "Send" permissions on the target Event Hub.
+        
+        ## Client timeout (defaults to 30s)
+        # timeout = "30s"
 
-        ## Name of the EventHub to send the data to
-        event_hub_name = ""
+        ## Partition key
+        ## Metric tag or field name to use for the event partition key. The value of
+        ## this tag or field is set as the key for events if it exists. If both, tag
+        ## and field, exist the tag is preferred.
+        # partition_key = ""
 
-        ## The format of the data to be sent to the eventhub( supports AVRO, JSON)
-        message_format = ""
+        ## Set the maximum batch message size in bytes
+        ## The allowable size depends on the Event Hub tier
+        ## See: https://learn.microsoft.com/azure/event-hubs/event-hubs-quotas#basic-vs-standard-vs-premium-vs-dedicated-tiers
+        ## Setting this to 0 means using the default size from the Azure Event Hubs Client library (1000000 bytes)
+        # max_message_size = 1000000
+
+        ## Data format to output.
+        ## Each data format has its own unique set of configuration options, read
+        ## more about them here:
+        ## https://github.com/influxdata/telegraf/blob/master/docs/DATA_FORMATS_OUTPUT.md
+        data_format = "json"
         
         
