--- a/plugins/outputs/microsoft_fabric/sample.conf
+++ b/plugins/outputs/microsoft_fabric/sample.conf
@@ -1,20 +1,20 @@
 # Sends metrics to Microsoft Fabric
 [[outputs.microsoft_fabric]]
-  ## The URI property of the Azure Data Explorer resource on Azure
+  ## The URI property of the Eventhouse resource on Azure
   ## ex: connection_string = https://myadxresource.australiasoutheast.kusto.windows.net
   connection_string = ""
 
 
-    [outputs.microsoft_fabric.adx_conf]
-        ## The Azure Data Explorer database that the metrics will be ingested into.
+    [outputs.microsoft_fabric.eh_conf]
+        ## The Eventhouse database that the metrics will be ingested into.
         ## The plugin will NOT generate this database automatically, it's expected that this database already exists before ingestion.
         ## ex: "exampledatabase"
         database = ""
 
-        ## Timeout for Azure Data Explorer operations
+        ## Timeout for Eventhouse operations
         # timeout = "20s"
 
-        ## Type of metrics grouping used when pushing to Azure Data Explorer.
+        ## Type of metrics grouping used when pushing to Eventhouse.
         ## Default is "TablePerMetric" for one table per different metric.
         ## For more information, please check the plugin README.
         # metrics_grouping_type = "TablePerMetric"
@@ -32,9 +32,9 @@
         ##    - queued   --  queue up metrics data and process sequentially
         # ingestion_type = "queued"
 
-    [outputs.microsoft_fabric.eh_conf]
-        ## The full connection string to the Event Hub (required)
-        ## The shared access key must have "Send" permissions on the target Event Hub.
+    [outputs.microsoft_fabric.es_conf]
+        ## The full connection string to the Event stream (required)
+        ## The shared access key must have "Send" permissions on the target Event stream.
         
         ## Client timeout (defaults to 30s)
         # timeout = "30s"
@@ -46,9 +46,9 @@
         # partition_key = ""
 
         ## Set the maximum batch message size in bytes
-        ## The allowable size depends on the Event Hub tier
+        ## The allowable size depends on the Event stream tier
         ## See: https://learn.microsoft.com/azure/event-hubs/event-hubs-quotas#basic-vs-standard-vs-premium-vs-dedicated-tiers
-        ## Setting this to 0 means using the default size from the Azure Event Hubs Client library (1000000 bytes)
+        ## Setting this to 0 means using the default size from the Azure Event streams Client library (1000000 bytes)
         # max_message_size = 1000000
 
         ## Data format to output.
